Fix footer text alignment with bootstrap colomns and text-align left

--- a/_scss/2-global-components/_footer.scss
+++ b/_scss/2-global-components/_footer.scss
@@ -1,7 +1,7 @@
 .nav-social {
   float: left;
   list-style-type: none;
-  margin-left: 9px;
+  margin-left: -8px;
   padding-left: 0;
 }
 
